# KafkaCpp

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Kafka  Makefile  README.md  cmake_install.cmake
include/: EnvVar.h  Events.h  KafkaConsumer.h
main/: consumer_main.cpp
src/: Events.cpp  KafkaConsumer.cpp
